--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             height: 100vh;
-            background: linear-gradient(135deg, #000000, #1a0000);
+            background: linear-gradient(135deg, #000, #1a0000);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,7 +24,7 @@
             width: 400px;
             background: #0b0b0b;
             border: 1px solid #ff0000;
-            box-shadow: 0 0 25px rgba(255,0,0,0.4);
+            box-shadow: 0 0 30px rgba(255,0,0,0.4);
             padding: 30px;
             border-radius: 10px;
         }
@@ -77,11 +77,6 @@
             border-radius: 5px;
         }
 
-        .form input:focus {
-            outline: none;
-            border-color: #ff0000;
-        }
-
         .form button {
             width: 100%;
             padding: 12px;
@@ -92,7 +87,6 @@
             border-radius: 5px;
             cursor: pointer;
             margin-top: 10px;
-            transition: 0.3s;
         }
 
         .form button:hover {
@@ -120,40 +114,42 @@
         <button id="registerTab" onclick="showRegister()">Register</button>
     </div>
 
-    <!-- Login Form -->
     <div id="loginForm" class="form active">
         <input type="text" placeholder="Username">
         <input type="password" placeholder="Password">
-        <button>Login</button>
+        <button onclick="goHome()">Login</button>
     </div>
 
-    <!-- Register Form -->
     <div id="registerForm" class="form">
         <input type="text" placeholder="Username">
         <input type="email" placeholder="Email">
         <input type="password" placeholder="Password">
         <input type="password" placeholder="Confirm Password">
-        <button>Create Account</button>
+        <button onclick="goHome()">Register</button>
     </div>
 
     <div class="footer-text">
-        © 2026 Southside Roleplay. All rights reserved.
+        © 2026 Southside Roleplay
     </div>
 </div>
 
 <script>
     function showLogin() {
-        document.getElementById("loginForm").classList.add("active");
-        document.getElementById("registerForm").classList.remove("active");
-        document.getElementById("loginTab").classList.add("active");
-        document.getElementById("registerTab").classList.remove("active");
+        loginForm.classList.add("active");
+        registerForm.classList.remove("active");
+        loginTab.classList.add("active");
+        registerTab.classList.remove("active");
     }
 
     function showRegister() {
-        document.getElementById("registerForm").classList.add("active");
-        document.getElementById("loginForm").classList.remove("active");
-        document.getElementById("registerTab").classList.add("active");
-        document.getElementById("loginTab").classList.remove("active");
+        registerForm.classList.add("active");
+        loginForm.classList.remove("active");
+        registerTab.classList.add("active");
+        loginTab.classList.remove("active");
+    }
+
+    function goHome() {
+        window.location.href = "home.html";
     }
 </script>
 
