--- a/home.html
+++ b/home.html
@@ -3,41 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Southside Roleplay | Home</title>
+
     <style>
-        body {
+        * {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: #0a0a0a;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', sans-serif;
+        }
+
+        body {
+            background: #000;
             color: #fff;
         }
 
+        /* NAVBAR */
         header {
-            background: #000;
-            padding: 15px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 2px solid red;
+            padding: 15px 40px;
+            background: rgba(0,0,0,0.8);
+            border-bottom: 1px solid red;
         }
 
         header h2 {
             color: red;
+            letter-spacing: 2px;
         }
 
         nav a {
             color: #ccc;
             margin-left: 20px;
             text-decoration: none;
+            transition: 0.3s;
         }
 
         nav a:hover {
             color: red;
+            text-shadow: 0 0 10px red;
         }
 
+        /* HERO */
         .hero {
-            height: 80vh;
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
-                        url('https://i.imgur.com/6Iej2c3.jpg') center/cover;
+            height: 90vh;
+            background:
+                linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
+                url("https://i.imgur.com/4M7IWwP.jpg") center/cover;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -46,31 +58,78 @@
         }
 
         .hero h1 {
-            font-size: 50px;
+            font-size: 60px;
             color: red;
+            text-shadow: 0 0 20px red;
         }
 
         .hero p {
-            max-width: 600px;
-            color: #ccc;
+            color: #aaa;
+            margin-top: 10px;
+            font-size: 18px;
         }
 
+        /* CARDS */
+        .cards {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            margin-top: -80px;
+            padding-bottom: 80px;
+        }
+
+        .card {
+            background: rgba(0,0,0,0.85);
+            border: 1px solid red;
+            width: 250px;
+            padding: 25px;
+            text-align: center;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255,0,0,0.4);
+            transition: 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 0 35px rgba(255,0,0,0.8);
+        }
+
+        .card h3 {
+            color: red;
+            margin-bottom: 10px;
+        }
+
+        .card p {
+            color: #ccc;
+            font-size: 18px;
+        }
+
+        /* SECTION */
         .section {
             padding: 60px 40px;
+            text-align: center;
             border-top: 1px solid #222;
         }
 
         .section h2 {
             color: red;
             margin-bottom: 15px;
+            text-shadow: 0 0 10px red;
         }
 
+        .section p {
+            color: #aaa;
+            max-width: 700px;
+            margin: auto;
+        }
+
+        /* FOOTER */
         footer {
-            text-align: center;
-            padding: 20px;
             background: #000;
             border-top: 1px solid red;
-            color: #666;
+            padding: 20px;
+            text-align: center;
+            color: #555;
         }
     </style>
 </head>
@@ -87,27 +146,53 @@
     </nav>
 </header>
 
+<!-- HERO -->
 <div class="hero">
-    <h1>Welcome to Southside Roleplay</h1>
-    <p>Experience next-level roleplay with gangs, police, EMS and realistic systems.</p>
+    <h1>SOUTHSIDE ROLEPLAY</h1>
+    <p>Next Generation Serious Roleplay Experience</p>
 </div>
 
+<!-- SERVER INFO CARDS -->
+<div class="cards">
+    <div class="card">
+        <h3>Server Name</h3>
+        <p>Southside Roleplay</p>
+    </div>
+
+    <div class="card">
+        <h3>Players Online</h3>
+        <p id="players">124 / 256</p>
+    </div>
+
+    <div class="card">
+        <h3>Server IP</h3>
+        <p>connect southside-rp.lk</p>
+    </div>
+</div>
+
+<!-- ABOUT -->
 <div class="section">
-    <h2>About Our Server</h2>
+    <h2>About Southside RP</h2>
     <p>
-        Southside Roleplay is a serious roleplay server inspired by real-life scenarios.
-        Join our community and create your own story.
+        Southside Roleplay is a FiveM-based serious roleplay server with realistic
+        systems, active staff team, gangs, police, EMS and immersive gameplay.
     </p>
-</div>
-
-<div class="section">
-    <h2>Our Factions</h2>
-    <p>Police Department, EMS, Gangs, Mafias & Civilian Jobs.</p>
 </div>
 
 <footer>
     © 2026 Southside Roleplay | All Rights Reserved
 </footer>
+
+<script>
+    // Demo player count animation
+    let count = 120;
+    setInterval(() => {
+        count = count + Math.floor(Math.random() * 3 - 1);
+        if (count < 100) count = 100;
+        if (count > 180) count = 180;
+        document.getElementById("players").innerText = count + " / 256";
+    }, 2000);
+</script>
 
 </body>
 </html>
