--- a/home.html
+++ b/home.html
@@ -46,16 +46,17 @@
 
         /* HERO */
         .hero {
-            height: 90vh;
-            background:
-                linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
-                url("https://i.imgur.com/4M7IWwP.jpg") center/cover;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
+        height: 90vh;
+        background:
+            linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
+            url("https://images.alphacoders.com/116/1161813.jpg") center/cover;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         }
+
 
         .hero h1 {
             font-size: 60px;
