--- a/home.html
+++ b/home.html
@@ -165,8 +165,8 @@
 <header>
     <h2>SOUTHSIDE RP</h2>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Factions</a>
+        <a href="home.html">Home</a>
+        <a href="factions.html">Factions</a>
         <a href="#">Admin Team</a>
         <a href="#">Community</a>
         <a href="index.html">Logout</a>
